 - Introduce new class Expression replacing user-defined Functions
 - std::map<std::string, Coefficient> replaces generated CoefficientSet code
 - Cleanup logic in Function class as a result of new Expression class
 - Introduce new Coefficient base class for form coefficients
 - Replace CellSize::min,max by Mesh::hmin,hmax
 - Use MUMPS instead of UMFPACK as default direct solver in both serial and parallel
 - Fix bug in SystemAssembler
 - Remove support for PETSc 2.3 and support PETSc 3.0.0 only
 - Remove FacetNormal Function. Use UFL facet normal instead.
 - Add update() function to FunctionSpace and DofMap for use in adaptive mesh refinement
0.9.3 [2009-09-25]
 - Add global parameter "ffc_representation" for form representation in FFC JIT compiler
 - Make norm() function handle both vectors and functions in Python
 - Speedup periodic boundary conditions and make work for mixed (vector-valued) elements
 - Add possibilities to use any number numpy array when assigning matrices and vectors
 - Add possibilities to use any integer numpy array for indices in matrices and vectors
 - Fix for int typemaps in PyDOLFIN
 - Split mult into mult and transpmult
 - Filter out PETSc argument when parsing command-line parameters
 - Extend comments to SWIG interface files
 - Add copyright statements to SWIG interface files (not finished yet)
 - Add typemaps for misc std::vector<types> in PyDOLFIN
 - Remove dependencies on std_vector.i reducing SWIG wrapper code size
 - Use relative %includes in dolfin.i
 - Changed names on SWIG interface files dolfin_foo.i -> foo.i
 - Add function interpolate() in Python interface
 - Fix typmaps for uint in python 2.6
 - Use TypeError instead of ValueError in typechecks in typmaps.i
 - Add in/out shared_ptr<Epetra_FEFoo> typemaps for PyDOLFIN
 - Fix JIT compiling in parallel
 - Add a compile_extension_module function in PyDOLFIN
 - Fix bug in Python vector assignment
 - Add support for compressed base64 encoded VTK files (using zlib)